Fix background on Firefox

--- a/assets/stylesheets/main/horse-races.css.scss
+++ b/assets/stylesheets/main/horse-races.css.scss
@@ -116,7 +116,7 @@ $wavy-path: 'M0,1C3,1 2,2 5,2C8,2 7,1 10,1L11,1L11,6L-1,6L-1,1Z';
       @media (max-width: $widest-mobile) { margin-left: -$horse-width-mobile * 19 / 20; }
 
       // The shadow is the same for all three backgrounds, so write it once
-      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 10 5"><defs><filter x="-1" y="-1" width="12" height="7" id="blur"><feGaussianBlur stdDeviation="0.45" result="blur"/></filter></defs><path d="#{$wavy-path}" fill="black" filter="url(#blur)"/><path d="#{$wavy-path}" stroke="white" stroke-width="0.4" opacity="0.75"/></svg>') repeat-x left top;
+      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 10 5"><defs><filter x="-1" y="-1" width="12" height="7" id="blur"><feGaussianBlur stdDeviation="0.45" result="blur"/></filter></defs><path d="#{$wavy-path}" fill="black" filter="url(%23blur)"/><path d="#{$wavy-path}" stroke="white" stroke-width="0.4" opacity="0.75"/></svg>') repeat-x left top;
 
       &::after {
         content: ' ';
@@ -179,7 +179,7 @@ $wavy-path: 'M0,1C3,1 2,2 5,2C8,2 7,1 10,1L11,1L11,6L-1,6L-1,1Z';
       display: inline-block;
       height: 2.5rem;
       opacity: 0;
-      background: url('data:image/svg+xml,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 5"><defs><pattern id="p" width="5" height="5" patternUnits="userSpaceOnUse"><path d="M-1,1L1,-1M-1,6L6,-1M4,6L6,4" stroke="rgba(0,0,0,.5)" stroke-width="5"/></pattern></defs><path d="#{$wavy-path}" fill="url(#p)"/></svg>') repeat-x left top;
+      background: url('data:image/svg+xml,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 5"><defs><pattern id="p" width="5" height="5" patternUnits="userSpaceOnUse"><path d="M-1,1L1,-1M-1,6L6,-1M4,6L6,4" stroke="rgba(0,0,0,.5)" stroke-width="5"/></pattern></defs><path d="#{$wavy-path}" fill="url(%23p)"/></svg>') repeat-x left top;
       background-size: auto 2.5rem;
 
       &.current-step { opacity: 1; }
